[package]
name = "renderx"
version = "0.1.0"
authors = ["josephlenton@gmail.com <josephlenton@gmail.com>"]
edition = "2018"
license = "MIT"
description = "For rendering HTML in Rust"

[dependencies]

[dev-dependencies]
rsx_core = {path = "./rsx_core"}
rsx_macro = {path = "./rsx_macro"}
classnames = "2.1.3"
pretty_assertions = "0.6.1"

