[package]
name = "rsx_macro"
version = "0.1.0"
authors = ["Joseph Lenton <josephlenton@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
rsx_parser = {path = "./../rsx_parser"}

[dev-dependencies]
classnames = "2.1.1"
rsx_core = {path = "./../rsx_core"}
pretty_assertions = "0.6.1"
