[package]
name = "parser"
version = "0.1.0"
authors = ["Joseph Lenton <josephlenton@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.9"
lookahead = "0.1.0"
syn = { version = "1.0.63", features = ["derive", "printing", "parsing", "full", "extra-traits"] }

[dev-dependencies]
pretty_assertions = "0.6.1"
